change yarn to npm, patch version on release !minor update

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: yarn install
-      - run: yarn test
+      - run: npm install
+      - run: npm run test
 
   publish-gpr:
     needs: build
@@ -26,11 +26,11 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
           scope: '@mentorpass'
-      - run: yarn install
+      - run: npm install
       - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
       - run: git pull --tags
-      - run: yarn version --minor
+      - run: npm version patch
       - run: git push --tags && git push
-      - run: yarn publish
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
