--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@mentorpass'
       - run: git checkout origin/master
+      - run: git pull origin master
       - run: npm install
       - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
       - run: git pull --tags
